tests/errors/ellipsis_syntax_4.pyx
# mode: error

[
    ..
    .,
    None
]

_ERRORS = u"""
4: 4: Expected an identifier or literal
"""
